k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pho-flask-psql-test
  namespace: pho-flask-psql-test
spec:
  selector:
    app: pho-flask-psql-test
  ports:
    - port: 80
      targetPort: 8080
